welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:24: error: not found: value faireV
for ( tour <- 1 to 4) { faireV() }
                        ^