welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {
def faireMotif() {
def faireV() {
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	droite()
	avance()
	baisseBrosse()
	leveBrosse()
	droite()
	avance()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
	
} }
for ( tour <- 1 to 4) { faireV() }
for ( faireV <- 1 to 9) {faireMotif }
}
